--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:               Lagrange
 tagline:             a minimalist Jekyll theme
 email:               your-email@domain.com
 description:
-baseurl:             "https://lenpaul.github.io" # the subpath of your site, e.g. /blog
-url:                 "/Lagrange" # the base hostname & protocol for your site
+baseurl:             "/Lagrange" # the subpath of your site, e.g. /blog
+url:                 "https://lenpaul.github.io" # the base hostname & protocol for your site
 twitter_username:    jekyllrb
 github_username:     jekyll
 
