--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title:               Lagrange
 tagline:             a minimalist Jekyll theme
 description:
-baseurl:             "/Lagrange"
-url:                 "https://lenpaul.github.io"
+baseurl:             #"/Lagrange"
+url:                 #"https://lenpaul.github.io"
 author:
   name:              "Paul Le"
   email:             "l.nguyen.paul@gmail.com"
@@ -11,6 +11,10 @@ author:
   github:            "lenpaul"
   facebook:          "Le.Paul.94"
   linkedin:          "lenpaul"
+
+gems:                [jekyll-paginate]
+paginate:            2
+
 
 # Build settings
 markdown:            kramdown
