--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,10 @@
 title:               Lagrange
 tagline:             a minimalist Jekyll theme
 description:
-baseurl:            "/Lagrange"
-url:                "https://lenpaul.github.io"
+baseurl:            #"/Lagrange"
+url:                #"https://lenpaul.github.io"
+github:
+  url:               "https://lenpaul.github.io/Lagrange"
 author:
   name:              "Paul Le"
   email:             "l.nguyen.paul@gmail.com"
