--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site Settings
-title:               Lagrange
-tagline:             a minimalist Jekyll theme
+title:               n0where
+tagline:             Ruoxi's personal blog
 description:
 baseurl:            #"/Lagrange"
-url:                #"https://lenpaul.github.io"
+url:                #"https://n0whereRuoxi.github.io"
 github:
-  url:               "https://lenpaul.github.io/Lagrange"
+  url:               "https://n0whereRuoxi.github.io/"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "Ruoxi Li"
+  email:             "rli12314@terpmail.umd.edu"
+  twitter:           ""
+  instagram:         "ruo_xii"
+  github:            "n0whereRuoxi"
+  facebook:          "ruoxi.li.58"
+  linkedin:          "liruoxi95"
 paginate:            5
 
 
