Update config file

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:               Lagrange
 tagline:             a minimalist Jekyll theme
 description:
-baseurl:            "/Lagrange"
-url:                "https://lenpaul.github.io"
+baseurl:            #"/Lagrange"
+url:                "/Lagrange" #"https://lenpaul.github.io"
 github:
   url:               "https://lenpaul.github.io/Lagrange"
 author:
