--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title:               Lagrange
 tagline:             a minimalist Jekyll theme
 description:
 baseurl:            #"/Lagrange"
-url:                "/Lagrange" #"https://lenpaul.github.io"
+url:                #"https://lenpaul.github.io"
 github:
-  url:               "https://lenpaul.github.io/Lagrange"
+  url:               #"https://lenpaul.github.io/Lagrange"
 author:
   name:              "Paul Le"
   email:             "l.nguyen.paul@gmail.com"
