--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site Settings
-title:               Lagrange
-tagline:             a minimalist Jekyll theme
+title:               The Blog of Toyaji
+tagline:             Various topics on data science
 description:
 baseurl:            #"/Lagrange"
-url:                #"https://lenpaul.github.io"
+url:                 "https://toyaji.github.io"
 github:
-  url:               #"https://lenpaul.github.io/Lagrange"
+  url:               "https://github.com/toyaji"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "Paul Shin"
+  email:             "toyaji83@gmail.com"
+  twitter:           "toyaji83"
+  instagram:         "happytoday83"
+  github:            "toyaji"
+  facebook:          "paul.shin.351"
+  linkedin:          "paul-shin-152642133"
 navigation:
 - title: About
   url: /about
@@ -23,7 +23,7 @@ navigation:
   url: /contact
 
 paginate:            5
-disqus:              #"your-disqus"
+disqus:              "disqus_QYpfGOudS3"
 
 # Build settings
 markdown:            kramdown
