--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title:               Lagrange
+title:               mrchypark
 tagline:             a minimalist Jekyll theme
 description:
 baseurl:            #"/Lagrange"
@@ -7,13 +7,13 @@ url:                #"https://lenpaul.github.io"
 github:
   url:               #"https://lenpaul.github.io/Lagrange"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "박찬엽"
+  email:             "mrchypark@gmail.com"
+  twitter:           "mrchypark_"
+  instagram:         "mrchypark"
+  github:            "mrchypark"
+  facebook:          "mrchypark"
+  linkedin:          "chanyub.park"
 navigation:
 - title: About
   url: /about
@@ -23,7 +23,7 @@ navigation:
   url: /contact
 
 paginate:            5
-disqus:              #"your-disqus"
+disqus:              "mrchypark"
 
 # Build settings
 markdown:            kramdown
