--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   instagram:         "mrchypark"
   github:            "mrchypark"
   facebook:          "mrchypark"
-  linkedin:          "chanyub.park"
+  linkedin:          "chanyubpark"
 navigation:
 - title: About
   url: /about
