--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
 title:               Mrchypark
-tagline:             Log for me.
+tagline:             Log for me
 description:
 baseurl:            #"/Lagrange"
 url:                #"https://lenpaul.github.io"
