--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:               Jonne Sälevä
 tagline:             machine learning, programming, and language
 description:
 baseurl:            #""
-url:                #'https://www.github.com/j0ma/j0ma.github.io'
+url:                https://j0ma.github.io#'https://www.github.com/j0ma/j0ma.github.io'
 github:
    url:             #'https://www.github.com/j0ma/j0ma.github.io'
 author:
