--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Site Settings
-title:               Lagrange
-tagline:             a minimalist Jekyll theme
+title:               Rachel Childs
+tagline:             putting pen to paper
 description:
 baseurl:            #"/Lagrange"
 url:                #"https://lenpaul.github.io"
 github:
   url:               #"https://lenpaul.github.io/Lagrange"
 author:
-  name:              "Paul Le"
-  email:             "l.nguyen.paul@gmail.com"
-  twitter:           "paululele"
-  instagram:         "paululele"
-  github:            "lenpaul"
-  facebook:          "Le.Paul.94"
-  linkedin:          "lenpaul"
+  name:              "Rachel Childs"
+  email:             "rachchilds@gmail.com"
+  #twitter:           "paululele"
+  instagram:         "rppop"
+  #github:            "lenpaul"
+  facebook:          "rachel.childs.54"
+  linkedin:          "rachel-childs"
 navigation:
 - title: About
   url: /about
-- title: Writing
-  url: /writing
+- title: Posts
+  url: /posts
 - title: Contact
   url: /contact
 
