--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,7 @@
-title:  Lagrange
-tagline:  a minimalist Jekyll theme
+title:  Roy Berube
+tagline:  personal site
 author:
-  name: "Paul Le"
-  twitter:  paululele
+  name: "Roy Berube"
 
 menu:
 - {name: 'About', url: 'about.html'}
@@ -10,10 +9,8 @@ menu:
 - {name: 'Contact', url: 'contact.html'}
 
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'github', link: 'https://www.github.com/royberube'}
+- {icon: 'linkedin', link: 'http://www.linkedin.com/in/royberube/'}
+- {icon: 'envelope', link: 'mailto:royberube1965@gmail.com'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
