--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed]
 
 # Customise feed settings (uncommenting following two fields to customise feed title and description)
-#title:		     "Lagrange-Custom"
-#description:	     "a minimalist Jekyll theme-Custom"
+title:		     "Control of chaos"
+description:	     "data science from physics perspective"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
