--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
-title:  Lagrange
-tagline:  a minimalist Jekyll theme
+title:  Control of chaos
+tagline:  data science from physics perspective
 
 # Authors documented under _data
 
