--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,16 +6,15 @@ disqus:
 google-ID: 'UA-80213386-1'
 
 menu:
+- {name: 'Home', path: 'menu', url: 'home.html'}
+- {name: 'Archive', path: 'menu', url: 'archive.html'}
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'github', link: 'https://www.github.com/caityp'}
+- {icon: 'twitter', link: 'https://twitter.com/CaityPeterson'}
+- {icon: 'linkedin', link: 'http://www.linkedin.com/in/caityp/'}
 - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
