--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,9 +6,9 @@ disqus:
 google-ID: 'UA-80213386-1'
 
 menu:
-- {name: 'Home', path: 'menu', url: 'home.html'}
-- {name: 'Archive', path: 'menu', url: 'archive.html'}
 - {name: 'About', path: 'menu', url: 'about.html'}
+- {name: 'Writing', path: 'menu', url: 'writing.html'}
+- {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
