--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,11 +12,12 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'github', link: 'https://www.github.com/yeonahki'}
+- {icon: 'facebook', link: 'https://www.facebook.com/kiyeonah'}
+# - {icon: 'twitter', link: 'https://twitter.com/paululele'}
+# - {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
+# - {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+# - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
