--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,14 +1,14 @@
 # Change to true for Disqus comments
 disqus:
-  comments: false
+  comments: true
   disqus_shortname: 'https-lenpaul-github-io-lagrange'
 
 google-ID: 'UA-112060364-1'
 
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'Sobre', path: 'menu', url: 'about.html'}
+- {name: 'Blog', path: 'menu', url: 'writing.html'}
+- {name: 'Contactos', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
