--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ title:		           'Lagrange'
 description:	       'a minimalist Jekyll theme'
 author:              'Paul Le'
 
+remote-theme: mylagrange
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
