--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Lagrange'
-description:	       'a minimalist Jekyll theme'
-author:              'Paul Le'
+title:		           'My test site'
+description:	       'using Lagrange theme'
+author:              'Samarul'
 
-remote-theme: mylagrange
+remote_theme: mylagrange
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
