--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title:		           'My test site'
 description:	       'using Lagrange theme'
 author:              'Samarul'
 
-remote_theme: "mylagrange"
+remote_theme: LeNPaul/Lagrange
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
