--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate:            5
 markdown:            kramdown
 highlighter:         rouge
 permalink:           none
-plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag, jekyll-remote-theme]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'My test site'
