--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,6 @@ author:              'Samarul'
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
+
+staticman:
+  branch: "gh-pages"
