--- a/staticman.yml
+++ b/staticman.yml
@@ -7,8 +7,8 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  #allowedFields: ["comment", "name", "email", "website"]
-  allowedFields: ["name", "email", "url", "message"]
+  allowedFields: ["comment", "name", "email", "website"]
+  #allowedFields: ["name", "email", "url", "message"]
 
   auth:
     required: false
@@ -36,26 +36,6 @@ comments:
   # with a `type` property, which configures the generated field, or any value
   # to be used directly (e.g. a string, number or array)
   generatedFields:
-    authType:
-      type: user
-      options:
-        property: "type"
-    email:
-      type: user
-      options:
-        property: "email"
-    username:
-      type: user
-      options:
-        property: "username"
-    name:
-      type: user
-      options:
-        property: "name"
-    siteUrl:
-      type: user
-      options:
-        property: "siteUrl"
     date:
       type: date
       options:
@@ -90,6 +70,7 @@ comments:
     #
     # Mailgun domain (encrypted)
     #domain: "4r3e2w1q"
+  filename: comment-{@timestamp}
 
   # (*) REQUIRED
   #
@@ -98,8 +79,8 @@ comments:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  #requiredFields: ["name", "comment", "email"]
-  requiredFields: ["name", "email", "message"]
+  requiredFields: ["name", "comment", "email"]
+  #requiredFields: ["name", "email", "message"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
