--- a/staticman.yml
+++ b/staticman.yml
@@ -7,7 +7,7 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["comment", "name", "email", "website"]
+  allowedFields: ["name", "email", "website", "comment"]
   #allowedFields: ["name", "email", "url", "message"]
 
   auth:
