--- a/staticman.yml
+++ b/staticman.yml
@@ -7,8 +7,8 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["name", "email", "website", "comment"]
-  #allowedFields: ["name", "email", "url", "message"]
+  #allowedFields: ["name", "email", "website", "comment"]
+  allowedFields: ["name", "email", "website", "message"]
 
   auth:
     required: false
@@ -79,8 +79,8 @@ comments:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["name", "comment", "email"]
-  #requiredFields: ["name", "email", "message"]
+  #requiredFields: ["name", "comment", "email"]
+  requiredFields: ["name", "email", "message"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
