--- a/staticman.yml
+++ b/staticman.yml
@@ -7,8 +7,8 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  #allowedFields: ["name", "email", "website", "comment"]
-  allowedFields: ["name", "email", "website", "message"]
+  allowedFields: ["name", "email", "website", "comment"]
+  #allowedFields: ["name", "email", "url", "message"]
 
   auth:
     required: false
@@ -25,8 +25,9 @@ comments:
   # (*) REQUIRED
   #
   # Destination path (filename) for the data files. Accepts placeholders.
-  filename: "entry{@timestamp}"
-
+  #filename: "entry{@timestamp}"
+  filename: comment-{@timestamp}
+  
   # The format of the generated data files. Accepted values are "json", "yaml"
   # or "frontmatter"
   format: "yaml"
@@ -70,7 +71,7 @@ comments:
     #
     # Mailgun domain (encrypted)
     #domain: "4r3e2w1q"
-  filename: comment-{@timestamp}
+
 
   # (*) REQUIRED
   #
@@ -79,8 +80,8 @@ comments:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  #requiredFields: ["name", "comment", "email"]
-  requiredFields: ["name", "email", "message"]
+  requiredFields: ["name", "comment", "email"]
+  #requiredFields: ["name", "email", "message"]
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
