--- a/_config.yml
+++ b/_config.yml
@@ -32,5 +32,8 @@ url: https://samarulmeu.github.io/mylagrange
 #feed:
 #  path: rss-feed.xml
 
-#staticman:
-#  branch: "gh-pages"
+staticman:
+   branch: "gh-pages"
+   path: "comments/{options.slug}"
+   filename: comment-{@timestamp}
+   format: "yaml"
