--- a/staticman.yml
+++ b/staticman.yml
@@ -26,7 +26,7 @@ comments:
   #
   # Destination path (filename) for the data files. Accepts placeholders.
   #filename: "entry{@timestamp}"
-  filename: comment-{@timestamp}
+  filename: "comment-{@timestamp}"
   
   # The format of the generated data files. Accepted values are "json", "yaml"
   # or "frontmatter"
