--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,10 @@ staticman:
    path: "comments/{options.slug}"
    filename: "comment-{@timestamp}"
    format: "yaml"
+   allowedFields: ["name", "email", "website", "comment"]
+   requiredFields: ["name", "comment", "email"]
+   generatedFields:
+    date:
+      type: date
+      options:
+        format: "iso8601"
