--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ url: https://samarulmeu.github.io/mylagrange
 #feed:
 #  path: rss-feed.xml
 
+comments:
+  provider: "staticman"
+
 staticman:
    branch: "gh-pages"
 
