--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ markdown:            kramdown
 highlighter:         rouge
 #permalink:           none
 permalink:           /:title/
-plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag, jekyll-remote-theme]
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'My test site'
