--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ url: https://samarulmeu.github.io/mylagrange
 repository  : samarulmeu.github.io/mylagrange
 
 comments:
-  provider  : "staticman_v3"
+  provider  : "staticman"
 
 staticman:
    branch: "gh-pages"
