--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ url: https://samarulmeu.github.io/mylagrange
 
 repository  : samarulmeu.github.io/mylagrange
 
+staticmanUrl: https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/mylagrange/gh-pages/comments
+
 comments:
   provider  : "staticman"
 
