--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ repository  : samarulmeu.github.io/mylagrange
 
 staticmanUrl: https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/mylagrange/gh-pages/comments
 
-comments:
-  provider  : "staticman"
+comments: true
+#  provider  : "staticman"
 
 #comments: staticman
 
