--- a/staticman.yml
+++ b/staticman.yml
@@ -76,7 +76,7 @@ comments:
   # (*) REQUIRED
   #
   # Destination path (directory) for the data files. Accepts placeholders.
-  path: "comments/{options.slug}"
+  path: "_data/comments/{options.slug}"
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
