--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,6 +12,7 @@ social:
 - {icon: 'github', link: 'https://www.github.com/samarulmeu'}
 - {icon: 'twitter', link: 'https://twitter.com/samarulmeu'}
 - {icon: 'facebook', link: 'http://www.facebook.com/'}
+- {icon: 'googleplus', link: 'http://www.google.com/'}
 - {icon: 'envelope', link: 'mailto:samarul. meu@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
