--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,10 +9,10 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/samarulmeu'}
+- {icon: 'gitlab', link: 'https://www.gitlab.com/samarulmeu'}
 - {icon: 'twitter', link: 'https://twitter.com/samarulmeu'}
 - {icon: 'facebook', link: 'http://www.facebook.com/'}
-- {icon: 'googleplus', link: 'http://www.google.com/'}
+- {icon: 'google-plus', link: 'http://www.google.com/'}
 - {icon: 'envelope', link: 'mailto:samarul. meu@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
