--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@ paginate:            5
 # Build settings
 markdown:            kramdown
 highlighter:         rouge
-#permalink:           none
+# permalink:           none
 permalink:           /:title/
-plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag, jekyll-redirect-from]
+# plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag, jekyll-redirect-from]
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'My test site'
