--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,8 @@ google-ID: 'UA'
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
 - {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+# - {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'Contact', path: 'menu', url: 'contact/'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
