--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 timezone: "Europe/Bucharest"
 repository  : samarulmeu.github.io/mylagrange
 
-# staticmanUrl: https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/mylagrange/gh-pages/comments
+staticmanUrl: https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/mylagrange/gh-pages/comments
 
 # comments: true
 #  provider  : "staticman"
