--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 future: false
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'My test site'
+title:		           'Scribbler'
 description:	       'using Lagrange theme'
 author:              'Samarul'
 baseurl: "" # the subpath of your site, e.g. /blog
