--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed]
 
 future: false
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:               'My test site'
+title:               'SCRIBBLER'
 description:         'using Lagrange theme'
 author:              'Samarul'
 baseurl: "" # the subpath of your site, e.g. /blog
