--- a/staticman.yml
+++ b/staticman.yml
@@ -50,7 +50,7 @@ comments:
   # Whether entries need to be appproved before they are published to the main
   # branch. If set to `true`, a pull request will be created for your approval.
   # Otherwise, entries will be published to the main branch automatically.
-  moderation: false
+  moderation: true #false
 
   # Name of the site. Used in notification emails.
   name: "samarulmeu.github.io/mylagrange"
