support inline Latex

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ pagination:
   next_page: 'Newer'
   previous_page: 'Older'
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: 'share on:'
 
 related_posts: 'You may also enjoy:'
 
