--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 # Change to true for Disqus comments
 
-google-ID: 'UA'
+google-ID: 'UA-127451076-1'
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
