--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ title:               'SCRIBBLERul'
 description:         'using Lagrange theme'
 author:              'Samarul'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://samarulmeu.github.io/mylagrange
+url: https://samarul.tk
 #remote_theme: LeNPaul/Lagrange
 #remote_theme: samarulmeu/mylagrange
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
@@ -47,5 +47,3 @@ staticmanUrl: https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/myl
 
 staticman:
    branch: "gh-pages"
-
-  
