--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site Build Settings
 
 # Jekyll-paginate-v2 configuration
-#  pagination:
-#   enabled: true
-#   per_page: 5
-#   permalink: '/page/:num/'
-#   title: ':title - page :num of :max'
-#   limit: 0
-#   sort_field: 'date'
-#   sort_reverse: true
+ pagination:
+ enabled: true
+ per_page: 5
+ permalink: '/page/:num/'
+ title: ':title - page :num of :max'
+ limit: 0
+ sort_field: 'date'
+ sort_reverse: true
 
 # jekyll-paginate configuration
 paginate:            5
