--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Fatik's Blog'
-description:	       'a personal blog about stuff'
+title:               'Fatik'
+description:         'Personal Blog'
 author:              'Fatik Owais'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
