Added research page. Removed writing page for now

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: ''
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
+- {name: 'Research', path: 'menu', url: 'research.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
