--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'Lagrange'
-description:	       'a minimalist Jekyll theme'
-author:              'Paul Le'
+title:		           'US Biango'
+description:	       'A freelance web designer'
+author:              'Umaru S. Biango'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
