--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,3 +3,24 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
   
 publish_mode: editorial_workflow
+
+# This line should *not* be indented
+media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
+
+collections:
+#POSTS
+  - name: "post" # Used in routes, e.g., /admin/collections/blog
+    label: "post" # Used in the UI
+    folder: "_posts" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Meta Description", name: "meta_description", widget: "string", required: false}
+      - label: "Author"
+      - categories: "journal"
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
+      - {label: "Body", name: "body", widget: "markdown"}
