--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,9 @@ title:		           'US Biango'
 description:	       'A freelance web designer'
 author:              'Umaru S. Biango'
 
+# set to 'true' to enable Netlify CMS (/admin) in production builds
+netlifycms: true
+
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
