--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: gh-pages # Branch to update (optional; defaults to master)
   
 publish_mode: editorial_workflow
 
