--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,12 +10,12 @@ media_folder: "assets/img" # Media files will be stored in the repo under images
 collections:
 #POSTS
   - name: "post" # Used in routes, e.g., /admin/collections/blog
-    label: "writing" # Used in the UI
+    label: "post" # Used in the UI
     folder: "_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Meta Description", name: "meta_description", widget: "string", required: false}
       - label: "Author"
