--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,8 +15,8 @@ menu:
 social:
 - {icon: 'github', link: 'https://github.com/SUBiango'}
 - {icon: 'twitter', link: 'https://twitter.com/SUBiang'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+- {icon: 'facebook', link: 'https://www.facebook.com/umaru.biango'}
+- {icon: 'envelope', link: 'mailto:usbiango@gmail.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
