--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,11 +13,11 @@ menu:
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://github.com/SUBiango'}
-- {icon: 'twitter', link: 'https://twitter.com/SUBiang'}
+- {icon: 'twitter', link: 'https://twitter.com/SUBiango'}
 - {icon: 'facebook', link: 'https://www.facebook.com/umaru.biango'}
+- {icon: 'instagram', link: 'https://www.instagram.com/usbiango'}
 - {icon: 'envelope', link: 'mailto:usbiango@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'github', link: 'https://github.com/SUBiango'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
