--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,23 +1,21 @@
 # Change 'comments' to true for Disqus comments
 disqus:
   comments: false
-  disqus_shortname: 'https-lenpaul-github-io-lagrange'
+  disqus_shortname: ''
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-112060364-1'
+google-ID: 'UA-171658756-1'
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
+- {name: 'Blog', path: 'menu', url: 'blog.html'}
 - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: '/feed.xml'}
+- {icon: 'linkedin', link: 'http://www.linkedin.com/in/jamestranca/'}
+- {icon: 'twitter', link: 'https://twitter.com/jamesdtran'}
+- {icon: 'envelope', link: 'mailto:jamesdtran@gmail.com'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
@@ -25,8 +23,8 @@ pagination:
   next_page: 'Newer'
   previous_page: 'Older'
 
-sharing_button_prompt: 'Feel free to share!'
+sharing_button_prompt: 'Share:'
 
-related_posts: 'You may also enjoy:'
+related_posts: 'Other posts:'
 
-post_date_prefix: 'Written on'
+post_date_prefix: 'Posted:'
