--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'US BIANGO'
+title:		           'UMARU S BIANGO'
 description:	       'a freelance web designer'
 author:              'Umaru Biango'
 
