--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ permalink:           none
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
-title:		           'UMARU S BIANGO |'
-description:	       'A Freelance web designer'
-author:              
+title:		           'US BIANGO |'
+description:	       'Freelance web designer'
+author:              'Umaru Biango
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
