--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate:            5
 markdown:            kramdown
 highlighter:         rouge
 permalink:           none
-url:                 https://blog.subdesigne.com/
+url:                 https://blog.subdesigne.com
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-seo-tag, jekyll-feed]
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
