Adding more pages, photography and health

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,9 +7,11 @@ disqus:
 google-ID: 'UA-112060364-1'
 
 menu:
-- {name: 'About', path: 'menu', url: 'about.html'}
-- {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+- {name: 'about', path: 'menu', url: 'about.html'}
+- {name: 'engineering', path: 'menu', url: 'writing.html'}
+- {name: 'photography', path: 'menu', url: 'writing.html'}
+- {name: 'health', path: 'menu', url: 'writing.html'}
+- {name: 'contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
