--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'anseljohn'
-description:	       'engineer | athlete'
+description:	       'engineering | photography | health'
 author:              'John Anselmo'
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
