--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ disqus:
   disqus_shortname: ''
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: ''
+google-ID: 'dlafarga9505@sdsu.edu'
 
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
@@ -14,11 +14,7 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'github', link: ''}
-- {icon: 'twitter', link: ''}
 - {icon: 'linkedin', link: ''}
-- {icon: 'envelope', link: 'mailto:'}
-- {icon: 'rss-square', link: '/feed.xml'}
-# - {icon: 'rss-square', link: '/rss-feed.xml'}
 
 # Customize site text
 pagination:
